add fungsi edit profil, dan tambah catering

--- a/app/src/main/res/layout/nav_header_dashboard_admin.xml
+++ b/app/src/main/res/layout/nav_header_dashboard_admin.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
+        android:id="@+id/rlNavHeader"
         android:layout_height="160dp">
         <RelativeLayout
             android:layout_width="match_parent"
