--- a/app/src/main/res/layout/fragment_admin_catering.xml
+++ b/app/src/main/res/layout/fragment_admin_catering.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.AdminCateringFragment">
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_below="@+id/ivLogo"
+        android:fontFamily="@font/mark_web_w04_black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="7dp"
+        android:text="Catering Saya"
+        android:textColor="@color/light_orange"
+        android:textSize="20sp"
+        tools:ignore="MissingPrefix" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCatering"
+        android:layout_below="@+id/tvTitle"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +31,12 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:contentDescription="Add Catering"
         app:srcCompat="@drawable/ic_add_white_24dp"
         tools:ignore="VectorDrawableCompat" />
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
