--- a/app/src/main/res/layout/row_catering.xml
+++ b/app/src/main/res/layout/row_catering.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:id="@+id/lineCatering"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="5dp">
 
@@ -31,7 +32,7 @@
                 android:textSize="12sp"
                 android:scaleType="centerCrop"
                 app:riv_corner_radius="5dp"
-                android:src="@drawable/temp_barger"
+                android:src="@drawable/ic_placeholder"
                 tools:ignore="MissingPrefix" />
             <LinearLayout
                 android:layout_width="match_parent"
