--- a/app/src/main/res/layout/activity_detail_catering.xml
+++ b/app/src/main/res/layout/activity_detail_catering.xml
@@ -9,8 +9,8 @@
         android:layout_height="match_parent"
         android:layout_above="@id/lineButtonGroup">
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/ivCatering"
             android:src="@drawable/ic_appicon"
             android:layout_centerInParent="true"/>
