--- a/app/src/main/res/layout/activity_add_tenda.xml
+++ b/app/src/main/res/layout/activity_add_tenda.xml
@@ -9,8 +9,8 @@
         android:layout_height="match_parent"
         android:layout_above="@id/rlRegistration">
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
             android:id="@+id/ivCatering"
             android:src="@drawable/ic_appicon"
             android:layout_centerInParent="true"/>
