--- a/app/src/main/res/layout/activity_detail_catering_user.xml
+++ b/app/src/main/res/layout/activity_detail_catering_user.xml
@@ -54,92 +54,69 @@
                 tools:ignore="MissingConstraints" />
         </RelativeLayout>
     </RelativeLayout>
-    <androidx.core.widget.NestedScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scroll"
-        android:layout_below="@id/rlToolBar"
-        >
-        <RelativeLayout
+        android:layout_below="@+id/rlToolBar">
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <androidx.cardview.widget.CardView
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/cvFoodName"
+            app:cardCornerRadius="5dp"
+            >
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:id="@+id/cvFoodName"
-                app:cardCornerRadius="5dp"
-                >
-                <LinearLayout
+                android:orientation="vertical">
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            tools:text="Nama Toko"
-                            android:textSize="14sp"
-                            android:layout_margin="5dp"
-                            android:textColor="@color/black"
-                            android:id="@+id/tvName"
-                            android:layout_marginRight="5dp"
-                            android:fontFamily="@font/roboto_bold"
-                            tools:ignore="MissingPrefix" />
-                    </RelativeLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/cvFoodName"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
-                app:cardCornerRadius="5dp"
-                android:id="@+id/cvFoodDetail"
-                >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp">
+                    android:layout_margin="5dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Catering"
-                        android:textSize="12sp"
-                        android:layout_marginBottom="10dp"
+                        tools:text="Nama Toko"
+                        android:textSize="14sp"
+                        android:layout_margin="5dp"
                         android:textColor="@color/black"
+                        android:id="@+id/tvName"
                         android:layout_marginRight="5dp"
-                        fontPath="@string/font_bold"
-                        tools:ignore="MissingPrefix"
-                        />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/rvCatering"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/tvNoDataFound"
-                            android:visibility="gone"
-                            android:layout_gravity="center_horizontal"
-                            android:text="Belum ada catering"/>
-                    </LinearLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+                        android:fontFamily="@font/roboto_bold"
+                        tools:ignore="MissingPrefix" />
+                </RelativeLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/cvFoodName"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="5dp"
+            android:id="@+id/cvFoodDetail"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabs_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabMode="fixed" />
+
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/viewpager_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tabs_main"/>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
 
 
