--- a/app/src/main/res/layout/row_tenda_user.xml
+++ b/app/src/main/res/layout/row_tenda_user.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:id="@+id/lineTendaUser"
             android:layout_marginTop="8dp"
             >
             <RelativeLayout
