--- a/app/src/main/res/layout/activity_keranjang.xml
+++ b/app/src/main/res/layout/activity_keranjang.xml
@@ -52,6 +52,7 @@
         android:id="@+id/rvKeranjang"
         android:layout_below="@+id/rlToolBar"
         android:layout_marginTop="10dp"
+        android:layout_above="@+id/rlBottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
@@ -69,6 +70,49 @@
         app:lottie_loop="true"
         app:lottie_autoPlay="true" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rlBottom"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
 
+        <TextView
+            android:fontFamily="@font/roboto_bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="right"
+            android:gravity="right"
+            android:padding="10dp"
+            android:id="@+id/tvPriceTotal"
+            android:layout_above="@+id/tvGoToMakeOrder"
+            android:text="Total : Rp. 0"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            tools:ignore="MissingPrefix" />
+
+        <TextView
+            android:id="@+id/tvGoToMakeOrder"
+            android:fontFamily="@font/roboto_bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_editfield"
+            android:backgroundTint="@color/light_orange"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:text="Lanjut ke Buat Pesanan"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            tools:ignore="MissingPrefix" />
+
+    </LinearLayout>
 
 </RelativeLayout>
