--- a/app/src/main/res/layout/fragment_user_profil.xml
+++ b/app/src/main/res/layout/fragment_user_profil.xml
@@ -61,37 +61,12 @@
             android:textSize="12sp"
             android:layout_centerInParent="true"
             fontPath="@string/font_medium"
-            android:text="Email"
-            tools:ignore="MissingPrefix" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="@drawable/bg_onlycorner_gary"
-            android:id="@+id/edEmailAddress"
-            android:fontFamily="@font/roboto_medium"
-            android:textColor="@color/black"
-            android:paddingLeft="10dp"
-            android:hint="Email Address"
-            android:textSize="12sp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="5dp"
-            tools:ignore="MissingPrefix" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="12dp"
-            android:textSize="12sp"
-            android:layout_centerInParent="true"
-            fontPath="@string/font_medium"
             android:text="Nama"
             tools:ignore="MissingPrefix" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="@drawable/bg_onlycorner_gary"
+            android:background="@drawable/bg_editfield"
             android:id="@+id/edUserName"
             android:fontFamily="@font/roboto_medium"
             android:textColor="@color/black"
@@ -116,7 +91,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="@drawable/bg_onlycorner_gary"
+            android:background="@drawable/bg_editfield"
             android:id="@+id/edMobileNumber"
             android:fontFamily="@font/roboto_medium"
             android:textColor="@color/black"
@@ -126,6 +101,27 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginTop="5dp"
+            tools:ignore="MissingPrefix" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/light_orange"
+            android:background="@drawable/bg_corner_white_10"
+            android:fontFamily="@font/roboto_medium"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:visibility="invisible"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="Simpan Perubahan"
+            android:id="@+id/tvSaveUpdate"
+            android:enabled="false"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
             tools:ignore="MissingPrefix" />
     </LinearLayout>
     <LinearLayout
