finish detail pesanan

--- a/app/src/main/res/layout/activity_detail_pesanan.xml
+++ b/app/src/main/res/layout/activity_detail_pesanan.xml
@@ -40,7 +40,7 @@
         android:tint="@color/white" />
 
         <ImageView
-            android:id="@+id/ivBuktiBayar"
+            android:id="@+id/ivShowBuktiBayar"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:padding="5dp"
