--- a/app/src/main/res/layout/row_pesanan_user.xml
+++ b/app/src/main/res/layout/row_pesanan_user.xml
@@ -69,6 +69,17 @@
                         android:textSize="10sp"
                         tools:ignore="MissingPrefix" />
                 </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="status Pesanan"
+                    android:textSize="11sp"
+                    android:layout_gravity="right"
+                    android:layout_margin="8dp"
+                    android:textColor="@color/light_orange"
+                    android:id="@+id/tvStatus"
+                    android:fontFamily="@font/roboto_bold"
+                    tools:ignore="MissingPrefix" />
             </LinearLayout>
 
 
