--- a/app/src/main/res/layout/activity_add_tenda.xml
+++ b/app/src/main/res/layout/activity_add_tenda.xml
@@ -44,7 +44,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10sp"
             android:layout_marginBottom="10sp"
-            android:text="Tambah Tenda"
+            android:text="Tambah Paket Alat Pesta"
             android:textColor="@color/light_orange"
             android:textSize="15sp"
             tools:ignore="MissingPrefix" />
@@ -98,12 +98,28 @@
             android:paddingRight="10sp"
             android:textSize="14sp" />
 
+        <EditText
+            android:id="@+id/edSatuan"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_below="@id/edDeskripsi"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/bg_editfield"
+            android:hint="satuan"
+            android:inputType="textEmailAddress"
+            android:imeOptions="actionGo"
+            android:paddingLeft="10sp"
+            android:paddingRight="10sp"
+            android:textSize="14sp" />
+
         <TextView
             android:id="@+id/tvAdd"
             android:fontFamily="@font/roboto_medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edDeskripsi"
+            android:layout_below="@id/edSatuan"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="10sp"
             android:layout_marginTop="15dp"
