--- a/app/src/main/res/layout/activity_detail_tenda.xml
+++ b/app/src/main/res/layout/activity_detail_tenda.xml
@@ -4,9 +4,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_orange">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:id="@+id/rlToolBar">
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/light_orange" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize">
+
+            <ImageView
+                android:id="@+id/ivBack"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                android:layout_centerVertical="true"
+                android:adjustViewBounds="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/bg_orangecornertrans_10"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_back"
+                android:tint="@color/white" />
+
+            <ImageView
+                android:id="@+id/ivListDetailTenda"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:visibility="invisible"
+                android:layout_toLeftOf="@+id/ivAddDetailTenda"
+                android:layout_marginTop="6dp"
+                android:padding="5dp"
+                android:background="@drawable/bg_orangecornertrans_10"
+                android:tint="@color/white"
+                android:src="@drawable/ic_list"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/ivAddDetailTenda"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:visibility="invisible"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="6dp"
+                android:layout_marginTop="6dp"
+                android:padding="5dp"
+                android:background="@drawable/bg_orangecornertrans_10"
+                android:tint="@color/white"
+                android:src="@drawable/ic_add_white_24dp"
+                tools:ignore="MissingConstraints" />
+        </RelativeLayout>
+    </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/rlToolBar"
         android:layout_above="@id/lineButtonGroup">
         <ImageView
             android:layout_width="match_parent"
@@ -97,7 +155,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10sp"
             android:layout_marginBottom="10sp"
-            android:text="Tenda"
+            android:text="Paket Alat Pesta"
             android:textColor="@color/light_orange"
             android:textSize="15sp"
             tools:ignore="MissingPrefix" />
@@ -151,13 +209,29 @@
             android:paddingRight="10sp"
             android:textSize="14sp" />
 
+        <EditText
+            android:id="@+id/edSatuan"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_below="@id/edDeskripsi"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/bg_editfield"
+            android:hint="satuan"
+            android:inputType="textEmailAddress"
+            android:imeOptions="actionGo"
+            android:paddingLeft="10sp"
+            android:paddingRight="10sp"
+            android:textSize="14sp" />
+
         <TextView
             android:id="@+id/tvSaveEdit"
             android:visibility="invisible"
             android:fontFamily="@font/roboto_medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edDeskripsi"
+            android:layout_below="@id/edSatuan"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="10sp"
             android:layout_marginTop="15dp"
