--- a/app/src/main/res/layout/row_keranjang.xml
+++ b/app/src/main/res/layout/row_keranjang.xml
@@ -72,6 +72,22 @@
                         android:textSize="12sp"
                         tools:ignore="MissingPrefix" />
 
+                    <TextView
+                        android:id="@+id/tvJumlahDipesan"
+                        android:fontFamily="@font/roboto_bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:text="Jumlah dipesan"
+                        android:paddingLeft="5dp"
+                        android:maxLines="1"
+                        android:layout_marginTop="30dp"
+                        android:layout_below="@+id/tvPrice"
+                        android:ellipsize="end"
+                        android:textColor="@color/light_orange"
+                        android:textSize="12sp"
+                        tools:ignore="MissingPrefix" />
+
                     <ImageView
                         android:id="@+id/ivDeleteCartItem"
                         android:layout_width="30dp"
@@ -88,7 +104,7 @@
 
                     <TextView
                         android:id="@+id/tvJenis"
-                        android:layout_below="@+id/tvPrice"
+                        android:layout_below="@+id/tvJumlahDipesan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/main_green_color"
