--- a/app/src/main/res/layout/activity_detail_catering_user.xml
+++ b/app/src/main/res/layout/activity_detail_catering_user.xml
@@ -84,6 +84,17 @@
                         android:layout_marginRight="5dp"
                         android:fontFamily="@font/roboto_bold"
                         tools:ignore="MissingPrefix" />
+                    <TextView
+                        android:id="@+id/tvAlamat"
+                        android:fontFamily="@font/roboto_bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_below="@+id/tvName"
+                        android:text="Bandar lampung"
+                        android:textColor="@color/light_orange"
+                        android:textSize="12sp"
+                        tools:ignore="MissingPrefix" />
                 </RelativeLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
