--- a/app/src/main/res/layout/activity_detail_catering_user.xml
+++ b/app/src/main/res/layout/activity_detail_catering_user.xml
@@ -85,15 +85,28 @@
                         android:fontFamily="@font/roboto_bold"
                         tools:ignore="MissingPrefix" />
                     <TextView
-                        android:id="@+id/tvAlamat"
+                    android:id="@+id/tvAlamat"
+                    android:fontFamily="@font/roboto_bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_below="@+id/tvName"
+                    android:text="Bandar lampung"
+                    android:textColor="@color/light_orange"
+                    android:textSize="12sp"
+                    tools:ignore="MissingPrefix" />
+
+                    <TextView
+                        android:id="@+id/tvKontak"
                         android:fontFamily="@font/roboto_bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
-                        android:layout_below="@+id/tvName"
-                        android:text="Bandar lampung"
-                        android:textColor="@color/light_orange"
-                        android:textSize="12sp"
+                        android:layout_below="@+id/tvAlamat"
+                        android:text="Contact"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="10sp"
                         tools:ignore="MissingPrefix" />
                 </RelativeLayout>
             </LinearLayout>
