--- a/app/src/main/res/layout/row_tenda_user.xml
+++ b/app/src/main/res/layout/row_tenda_user.xml
@@ -104,6 +104,22 @@
                     android:textColor="@color/light_orange"
                     android:textSize="12sp"
                     tools:ignore="MissingPrefix" />
+
+                <TextView
+                    android:id="@+id/tvDeskripsiTenda"
+                    android:layout_below="@+id/tvPrice"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center"
+                    android:text="dekskripsi"
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="10sp"
+                    tools:ignore="MissingPrefix" />
             </RelativeLayout>
 
         </LinearLayout>
