--- a/app/src/main/res/layout/fragment_admin_beranda.xml
+++ b/app/src/main/res/layout/fragment_admin_beranda.xml
@@ -38,6 +38,16 @@
             android:textSize="20sp"
             tools:ignore="MissingPrefix" />
         <TextView
+            android:id="@+id/tvDeskripsi"
+            android:fontFamily="@font/roboto_medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="deskripsi"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            tools:ignore="MissingPrefix" />
+        <TextView
             android:id="@+id/tvAlamat"
             android:fontFamily="@font/roboto_medium"
             android:layout_width="wrap_content"
