add fungsi tolak pesanan

--- a/app/src/main/res/layout/activity_detail_pesanan_admin.xml
+++ b/app/src/main/res/layout/activity_detail_pesanan_admin.xml
@@ -70,8 +70,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
+                    android:orientation="vertical"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
 
@@ -86,6 +87,17 @@
                         android:layout_marginRight="5dp"
                         android:fontFamily="@font/roboto_bold"
                         tools:ignore="MissingPrefix" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:text="Telepon"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/black"
+                        android:id="@+id/tvPhone"
+                        android:layout_marginRight="5dp"
+                        android:fontFamily="@font/roboto_bold"
+                        tools:ignore="MissingPrefix" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -93,7 +105,8 @@
                         tools:text="tanggal Pesanan"
                         android:layout_below="@+id/tvPemesan"
                         android:textSize="12sp"
-                        android:layout_margin="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="15dp"
                         android:textColor="@color/black"
                         android:id="@+id/tvTanggal"
                         android:layout_marginRight="5dp"
@@ -117,7 +130,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="status Pesanan"
-                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right"
                         android:layout_below="@+id/tvAlamat"
                         android:textSize="12sp"
                         android:layout_margin="2dp"
@@ -127,21 +140,25 @@
                         android:fontFamily="@font/roboto_bold"
                         tools:ignore="MissingPrefix" />
 
-                </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/cvFoodName"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             app:cardCornerRadius="5dp"
             android:id="@+id/cvFoodDetail"
             >
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="wrap_content"
                 android:padding="5dp">
 
@@ -159,13 +176,13 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvPesanan"
-                    android:layout_below="@+id/tvTotalPriceAdmin"
+                    android:layout_below="@+id/tvSubInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp" />
 
 
-            </RelativeLayout>
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
