--- a/app/src/main/res/layout/activity_detail_pesanan.xml
+++ b/app/src/main/res/layout/activity_detail_pesanan.xml
@@ -109,7 +109,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <RelativeLayout
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
@@ -142,7 +143,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="status Pesanan"
-                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right"
                         android:layout_below="@+id/tvAlamat"
                         android:textSize="12sp"
                         android:layout_margin="2dp"
@@ -152,7 +153,7 @@
                         android:fontFamily="@font/roboto_bold"
                         tools:ignore="MissingPrefix" />
 
-                </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
