--- a/app/src/main/res/layout/row_detail_pesanan.xml
+++ b/app/src/main/res/layout/row_detail_pesanan.xml
@@ -22,18 +22,43 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="5dp">
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/ivKeranjang"
-                fontPath="@string/font_medium"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:textSize="12sp"
-                android:scaleType="centerCrop"
-                app:riv_corner_radius="5dp"
-                android:src="@drawable/ic_placeholder"
-                tools:ignore="MissingPrefix" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:id="@+id/rlGambarStatus"
+                android:layout_height="wrap_content">
+
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/ivKeranjang"
+                    fontPath="@string/font_medium"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_placeholder"
+                    android:textSize="12sp"
+                    app:riv_corner_radius="5dp"
+                    tools:ignore="MissingPrefix" />
+
+                <TextView
+                    android:id="@+id/tvStatusDetailPesanan"
+                    android:layout_below="@+id/ivKeranjang"
+                    android:layout_width="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_height="wrap_content"
+                    android:background="@color/red_btn_bg_color"
+                    android:fontFamily="@font/roboto_bold"
+                    android:layout_marginTop="5dp"
+                    android:paddingLeft="5dp"
+                    android:visibility="invisible"
+                    android:paddingRight="5dp"
+                    android:layout_marginRight="5dp"
+                    android:text="Status"
+                    android:textSize="12sp"
+                    android:textColor="@color/white"
+                    tools:ignore="RtlCompat" />
+
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,6 +111,20 @@
                         android:ellipsize="end"
                         android:textColor="@color/light_orange"
                         android:textSize="12sp"
+                        tools:ignore="MissingPrefix" />
+
+                    <ImageView
+                        android:id="@+id/ivTolak"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="start"
+                        android:src="@drawable/ic_delete_forever_red_24dp"
+                        android:layout_alignParentRight="true"
+                        android:paddingLeft="5dp"
+                        android:tint="@color/light_orange"
                         tools:ignore="MissingPrefix" />
 
                     <TextView
