--- a/app/src/main/res/menu/activity_dashboard_admin_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_admin_drawer.xml
@@ -21,6 +21,10 @@
             android:icon="@drawable/ic_add_shopping_cart_black_24dp"
             android:title="Data Pesanan" />
         <item
+            android:id="@+id/nav_notifikasi"
+            android:icon="@drawable/ic_notifications_active_black_24dp"
+            android:title="Notifikasi Pembayaran" />
+        <item
             android:id="@+id/nav_logout"
             android:title="Logout" />
     </group>
